# sierra-sdk

SampleApps/: SampleApps.mak
SampleApps/AirVantageAgent/: build_avagent.sh  makefile  readme.txt  start_sdk_hosti686.sh  stop_sdk_hosti686.sh
SampleApps/AirVantageAgent/avagent_r8m/: build_version
SampleApps/AirVantageAgent/avagent_r8m/cfwk/util/: CMakeLists.txt  dt_util.c  swi_util.c  swi_util.h
SampleApps/AirVantageAgent/avagent_r8m/non-free/porting/devtree_v2/: CMakeLists.txt  devtree2.map  devtree2_adapter.c  devtree_v2.h
SampleApps/CallHandling_Application/: makefile  readme.txt
SampleApps/Connection_Manager/: makefile  readme.txt
SampleApps/Firmware_Download/: makefile  readme.txt
SampleApps/Gobi_Image_Management/: carrierImageOverride.txt  makefile  readme.txt
SampleApps/LOC_Service/: makefile
SampleApps/MC7xxx_Image_Management/: makefile  readme.txt
SampleApps/PDS_Services/: makefile  readme.txt
SampleApps/SLQS_Tutorial_Application/: makefile
SampleApps/SMS_Application/: makefile  readme.txt
SampleApps/SWIOMA_Application/: makefile  readme.txt
api/: SWIWWANCMAPI.h  qmerrno.h
api/inc/: SwiDataTypes.h
docs/SwiApiReference/: SWIWWANCMAPI_8h.html  SWIWWANCMAPI_8h_source.html  SwiDataTypes_8h.html  SwiDataTypes_8h_source.html  annotated.html  apdoxypages_8c.html  classes.html  common_8h.html  common_8h_source.html  dir_017cac5c931568a1d8ef7c6703f92a50.html  dir_01d5647fc8c5a4939a6c05b94816c17a.html  dir_0d51985a52264f4201ff4df175f2ecbf.html  dir_11c1feb11448ceb6e3b847ab05ecc9da.html  dir_1b148fc5ae1a70de879bff5ee8977950.html  dir_2233b4466fe87973e904b121ce118bf9.html  dir_273bb6f6eef16e08face36b02abab554.html  dir_2b86a787f04070d40fd7d5846f97da9e.html  dir_2f6b72191d3817e8f37379bc42ebb9d4.html  dir_31eaea4c530b15ad923c8a3d6f7cc9fc.html  dir_37a3257b67224fcd25074643e6c5a78b.html  dir_4229b54c14f0482214f3af8ae4e142ee.html  dir_447d6d0fafeecda5bd70c9613e41f64f.html  dir_4484689e86060ad19f288cb0e41447c3.html  dir_45a115656fe1b9cb5b1814f47626c8f8.html  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_534be09d5ec4b61fa2b9b96bd6058b4a.html  dir_5e701eb23916745805915a57a23d6658.html  dir_60e1ad3277a56fb301a0a11317d95e72.html  dir_672aaaa4dcc34b260515ca99300a0003.html  dir_677dc42c32dd95d48da7fa2fbc1698cb.html  dir_6dc2c6a2736bf3ed7691afd4b4951dbf.html  dir_70d141ad22613aff9767f45b27b923aa.html  dir_720c0cdea7cc7a82f8ca38dbd2c1884a.html  dir_76757cc01784b83500789dbac60b784a.html  dir_7690246a17f5a4afc657a53eb0006e5a.html  dir_7c7807683a9ea2fbd02ea984f8402f19.html  dir_7f324cdf252b1bc10476d075f8cc6d4b.html  dir_7f579e21887211720d3f3de511b3a763.html  dir_812c91a4bd1a3fee72f3558c3fcb3aeb.html  dir_83f15ee3b013360d5149fe9c2889ec8a.html  (+1739 more)
pkgs/: slqscompile.mak
(+709 files in other folders)
